--- a/CódigoFuente/BitacorasProduccion/Views/empleados/Disable.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/empleados/Disable.cshtml
@@ -358,7 +358,7 @@
                     $('#msj-val-subordinados').hide();
                     swalWithBootstrapButtons.fire({
                         title: '¿Desea Continuar?',
-                        html: "Aviso: Se iniciará una solicitud de baja. Se enviará notificación al Jefe Directo y a Sistemas para su procesamiento.",
+                        html: "Aviso: Se iniciará una solicitud de baja. Se enviará notificación a Sistemas para su procesamiento.",
                         showCancelButton: true,
                         confirmButtonText: 'Aceptar',
                         cancelButtonText: 'Cancelar'
