2024-01-19 Se quita required de Matriz de requerimientos asignación.

--- a/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/Cerrar.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/Cerrar.cshtml
@@ -249,7 +249,7 @@
                                                         }
                                                     </td>
                                                     <td nowrap>
-                                                        <select name="hardware_@(item.id)_responsable" id="hardware_@(item.id)_responsable" class="form-control select2bs4" style="width:100%" required>
+                                                        <select name="hardware_@(item.id)_responsable" id="hardware_@(item.id)_responsable" class="form-control select2bs4" style="width:100%">
                                                             <option value=''>-- Seleccione un valor --</option>
                                                             @foreach (Portal_2_0.Models.empleados empleado in listEmpleados)
                                                             {
@@ -348,7 +348,7 @@
                                                         }
                                                     </td>
                                                     <td nowrap>
-                                                        <select name="software_@(item.id)_responsable" id="software_@(item.id)_responsable" class="form-control select2bs4" style="width:100%" required>
+                                                        <select name="software_@(item.id)_responsable" id="software_@(item.id)_responsable" class="form-control select2bs4" style="width:100%">
                                                             <option value=''>-- Seleccione un valor --</option>
                                                             @foreach (Portal_2_0.Models.empleados empleado in listEmpleados)
                                                             {
